<resources>
    <string name="app_name">HelloWorld</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="title_activity_sign_up">FullscreenActivity</string>
    <string name="title_activity_main">FullscreenActivity</string>

    <string name="login_activity_sign_up">Sign up</string>
    <string name="login_activity_log_in">Log in</string>
    <string name="login_activity_app_bar_text">Log in</string>
    <string name="login_activity_email">Email</string>
    <string name="login_activity_enter_your_email">Enter your email</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_enter_your_password">Enter your Password</string>
    <string name="login_activity_forgot_your_password">Forgot your password?</string>
    <string name="login_activity_continue_with_github">Continue with Github</string>
</resources>