<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginActivity_Title_FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity_background_color"
    android:foregroundTint="#000000"
    android:theme="@style/ThemeOverlay.HelloWorld.FullscreenContainer"
    tools:context=".LoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="-334dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="334dp"
        app:srcCompat="@drawable/ovalshape" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="344dp"
        android:layout_marginRight="-100dp"
        android:layout_marginBottom="-344dp"
        app:srcCompat="@drawable/ovalshape" />

    <FrameLayout
        android:id="@+id/LoginActivity_Title_Main_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="invisible"
        tools:visibility="invisible">

        <ImageView
            android:id="@+id/LoginActivity_Title_Main_ImageView"
            android:layout_width="147dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/hello_world" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/hero" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="74dp"
            android:layout_height="44dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="82dp"
            app:srcCompat="@drawable/hello_world" />

        <LinearLayout
            android:id="@+id/LoginActivity_Button_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/LoginActivity_Title_SignUp_Button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/white_round_rectangle"
                android:text="@string/login_activity_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/blue_396afc" />

            <Button
                android:id="@+id/LoginActivity_Title_Login_Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@android:color/transparent"
                android:text="@string/login_activity_log_in"
                android:textAllCaps="false" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        tools:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                app:tint="@color/white_ffffff" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/login_activity_app_bar_text"
                android:textColor="@color/white_ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:paddingLeft="5dp"
                android:text="@string/login_activity_email"
                android:textColor="@color/white_ffffff"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:ems="10"
                android:fontFamily="@font/inter"
                android:inputType="textEmailAddress"
                android:text="@string/login_activity_enter_your_email"
                android:textColor="@color/white_98ffffff"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_semi_bold"
                android:paddingLeft="5dp"
                android:text="@string/login_activity_password"
                android:textColor="@color/white_ffffff" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:ems="10"
                android:text="@string/login_activity_enter_your_password"
                android:textColor="@color/white_98ffffff"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_round_rectangle"
                android:fontFamily="@font/inter"
                android:text="@string/login_activity_log_in"
                android:textAllCaps="false"
                android:textColor="@color/blue_396afc"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:text="@string/login_activity_forgot_your_password"
                android:textAllCaps="false"
                android:textColor="@color/white_ffffff" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/black_round_rectangle"
            android:fontFamily="@font/inter"
            android:text="@string/login_activity_continue_with_github"
            android:textAllCaps="false"
            android:textColor="@color/white_ffffff" />

    </FrameLayout>

</FrameLayout>